# CppTestTemplate

./: .clang-format  CMakeLists.txt  LICENSE
__PROJECT_NAME__/: CMakeLists.txt
__PROJECT_NAME__/src/: main.cpp
test/: CMakeLists.txt  test.cpp
